--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "axios": "^1.2.3",
     "daisyui": "^2.47.0",
     "next": "13.1.1",
     "react": "18.2.0",
