--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.1",
     "axios": "^1.2.3",
     "daisyui": "^2.47.0",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
