--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@next/font": "13.1.1",
     "axios": "^1.2.3",
     "daisyui": "^2.47.0",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "next": "13.1.1",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
